# copywrite

./: .gitattributes  .gitignore  pyproject.toml
.claude/: settings.local.json
copywrite/: __init__.py  cli.py  config.py
copywrite/data/: __init__.py  augment.py  prepare.py
copywrite/engine/: __init__.py  renderer.py  server.py  synthdefs.py
copywrite/extractor/: __init__.py  style_model.py
copywrite/generator/: __init__.py  composer.py
copywrite/musicgen/: __init__.py  captions.py  dataset.py  generate.py  train.py
copywrite/pipeline/: __init__.py  combined.py
copywrite/rave/: __init__.py  explore.py  generate.py  train.py
copywrite/scoring/: __init__.py  clap_scorer.py  comparator.py  features.py
copywrite/transcriber/: __init__.py  analyzer.py  codegen.py  manual_dafunk.py  validator.py
copywrite/utils/: audio.py  ec2.py
data/: train_musicgen_ec2.py
data/captions/: Aerodynamic [52fNscjkST4]_mg_0000.txt  Aerodynamic [52fNscjkST4]_mg_0001.txt  Aerodynamic [52fNscjkST4]_mg_0002.txt  Aerodynamic [52fNscjkST4]_mg_0005.txt  Aerodynamic [52fNscjkST4]_mg_0006.txt  Aerodynamic [52fNscjkST4]_mg_0007.txt  Aerodynamic [52fNscjkST4]_mg_0008.txt  Aerodynamic [52fNscjkST4]_mg_0009.txt  Alive [FgILRynkeNg]_mg_0000.txt  Alive [FgILRynkeNg]_mg_0003.txt  Alive [FgILRynkeNg]_mg_0013.txt  Alive [FgILRynkeNg]_mg_0014.txt  Alive [FgILRynkeNg]_mg_0015.txt  Around the World [Jb6gcoR266U]_mg_0000.txt  Around the World [Jb6gcoR266U]_mg_0006.txt  Around the World [Jb6gcoR266U]_mg_0007.txt  Around the World [Jb6gcoR266U]_mg_0008.txt  Around the World [Jb6gcoR266U]_mg_0009.txt  Around the World [Jb6gcoR266U]_mg_0010.txt  (+431 more)
scripts/: ec2_setup.sh  generate_neverender.py
synthdefs/: copywrite_lib.scd
tests/: test_engine.py  test_scorer.py  test_transcriber.py
(+23 files in other folders)
