[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copywrite"
version = "0.1.0"
description = "Reverse-engineer production styles from reference audio and generate new tracks via SuperCollider"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "librosa>=0.10",
    "soundfile>=0.12",
    "rich>=13.0",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
clap = ["laion-clap>=1.1"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
copywrite = "copywrite.cli:cli"

[tool.setuptools.packages.find]
include = ["copywrite*"]
